Clean up startup for newer Docker.

--- a/fdb-client/Dockerfile
+++ b/fdb-client/Dockerfile
@@ -4,7 +4,7 @@ FROM ubuntu:12.04
 
 MAINTAINER "fdb-boston@foundationdb.com"
 
-RUN apt-get update && apt-get -y upgrade
+RUN apt-get update # && apt-get -y upgrade
 RUN apt-get -y install python-software-properties python-setuptools
 
 ADD https://foundationdb.com/downloads/I_accept_the_FoundationDB_Community_License_Agreement/2.0.0/foundationdb-clients_2.0.0-1_amd64.deb /tmp/
