--- a/sql-layer/supervisord.conf
+++ b/sql-layer/supervisord.conf
@@ -2,4 +2,4 @@
 nodaemon=true
 
 [program:fdbsql]
-command=/bin/bash -c "env >/tmp/docker.env && touch /etc/default/fdb-sql-layer && cat /etc/default/fdb-sql-layer >>/tmp/docker.env && mv /tmp/docker.env /etc/default/fdb-sql-layer && service fdb-sql-layer start"
+command=/bin/bash /usr/lib/foundationdb/docker-sql-layer.sh
