Update for newer Docker and newer Ubuntu.

--- a/doctrine-dbal-phpunit/Dockerfile
+++ b/doctrine-dbal-phpunit/Dockerfile
@@ -1,6 +1,6 @@
 # Doctrine-DBAL-PHPUnit: run unit tests for Doctrine adapter.
 
-FROM fdb/fdb-client
+FROM foundationdb/fdb-client
 
 MAINTAINER "fdb-boston@foundationdb.com"
 
