--- a/sql-layer/Dockerfile
+++ b/sql-layer/Dockerfile
@@ -4,10 +4,9 @@ FROM foundationdb/sql-layer-client
 
 MAINTAINER "fdb-boston@foundationdb.com"
 
-ADD http://foundationdb.com/downloads/I_accept_the_FoundationDB_Community_License_Agreement/sql-layer/1.9.5/fdb-sql-layer_1.9.5-1_all.deb /tmp/
-RUN dpkg -i /tmp/fdb-sql-layer_1.9.5-1_all.deb
+ADD https://foundationdb.com/downloads/I_accept_the_FoundationDB_Community_License_Agreement/sql-layer/pre-release/1.9.6-1/fdb-sql-layer_1.9.6-0_all.deb /tmp/
+RUN dpkg -i /tmp/fdb-sql-layer_1.9.6-0_all.deb
 
-RUN echo 'fdbsql.index_statistics.background=disabled' >>/etc/foundationdb/sql/server.properties
 RUN mv /etc/foundationdb/sql /etc/fdb-sql
 
 EXPOSE 15432
