--- a/oracle-jdk7/Dockerfile
+++ b/oracle-jdk7/Dockerfile
@@ -4,6 +4,7 @@ FROM foundationdb/fdb-client
 
 MAINTAINER "fdb-boston@foundationdb.com"
 
+RUN apt-get update
 RUN apt-get -y install software-properties-common
 RUN add-apt-repository ppa:webupd8team/java
 RUN apt-get update
