--- a/sql-layer/Dockerfile
+++ b/sql-layer/Dockerfile
@@ -4,8 +4,10 @@ FROM foundationdb/sql-layer-client
 
 MAINTAINER "fdb-boston@foundationdb.com"
 
-ADD https://foundationdb.com/downloads/I_accept_the_FoundationDB_Community_License_Agreement/sql-layer/2.0.latest/fdb-sql-layer_2.0.latest-1_all.deb /tmp/
-RUN dpkg -i /tmp/fdb-sql-layer_2.0.latest-1_all.deb
+# ADD http://landfill.boston.foundationdb.com/share/packages/latest/fdb-sql-layer.deb /tmp/
+# ADD fdb-sql-layer.deb /tmp/
+ADD https://foundationdb.com/downloads/I_accept_the_FoundationDB_Community_License_Agreement/sql-layer/2.0.latest/fdb-sql-layer_2.0.latest-1_all.deb /tmp/fdb-sql-layer.deb
+RUN dpkg -i /tmp/fdb-sql-layer.deb
 
 RUN echo 'fdbsql.postgres.host=0.0.0.0' >>/etc/foundationdb/sql/server.properties
 RUN mv /etc/foundationdb/sql /etc/fdb-sql
