Add LDAP server in container used to authenticate by SQL layer.

--- a/sql-layer/Dockerfile
+++ b/sql-layer/Dockerfile
@@ -9,6 +9,7 @@ MAINTAINER "fdb-boston@foundationdb.com"
 ADD https://foundationdb.com/downloads/I_accept_the_FoundationDB_Community_License_Agreement/sql-layer/2.0.latest/fdb-sql-layer_2.0.latest-1_all.deb /tmp/fdb-sql-layer.deb
 RUN dpkg -i /tmp/fdb-sql-layer.deb
 
+RUN echo >>/etc/foundationdb/sql/server.properties
 RUN echo 'fdbsql.postgres.host=0.0.0.0' >>/etc/foundationdb/sql/server.properties
 RUN echo 'fdbsql.http.host=0.0.0.0' >>/etc/foundationdb/sql/server.properties
 RUN mv /etc/foundationdb/sql /etc/fdb-sql
