Try to deal with quoting better.

--- a/sql-layer-client/Dockerfile
+++ b/sql-layer-client/Dockerfile
@@ -8,4 +8,5 @@ MAINTAINER "fdb-boston@foundationdb.com"
 ADD https://foundationdb.com/downloads/I_accept_the_FoundationDB_Community_License_Agreement/sql-layer/2.0.latest/fdb-sql-layer-client-tools_2.0.latest-1_all.deb /tmp/fdb-sql-layer-client-tools.deb
 RUN dpkg -i /tmp/fdb-sql-layer-client-tools.deb
 
-CMD fdbsqlcli -h $SQL_PORT_15432_TCP_ADDR $FDBSQLCLI_ARGS
+ADD fdbsqlcli.sh /
+CMD /fdbsqlcli.sh
