--- a/krb5-sql-layer-client/jaas.conf
+++ b/krb5-sql-layer-client/jaas.conf
@@ -3,3 +3,8 @@ pgjdbc {
      com.sun.security.auth.module.Krb5LoginModule required
      useTicketCache=true;
 };
+
+com.sun.security.jgss.initiate {
+     com.sun.security.auth.module.Krb5LoginModule required
+     useTicketCache=true;
+};
