--- a/krb5-sql-layer/krb5.conf
+++ b/krb5-sql-layer/krb5.conf
@@ -1,8 +1,8 @@
 [libdefaults]
-	default_realm = docker.local
+	default_realm = DOCKER.LOCAL
 
 [realms]
-	docker.local = {
+	DOCKER.LOCAL = {
 		kdc = kdc.docker.local
 		admin_server = kdc.docker.local
 	}
